Selection of states complete. Need to configure SSE messages